# ESP32USBECM

./: .gitignore  README.md  readmecn.md  sdkconfig  sdkconfig.old
.cache/clangd/index/: iperf.c.129890A6C0A68080.idx  iperf.h.D2B1A1980D490823.idx  iperf_cmd.c.1F07D25E42570958.idx  iperf_cmd.h.4DA4B5B7CFE5F851.idx  iperf_esp_check.h.690904CD5037D90A.idx  jsmn.h.D2AAB22BDCFA7C30.idx  json_parser.c.D0917CE430FD4F4A.idx  json_parser.h.C3D59AAD6917A2B6.idx  ping_cmd.c.976086FC37B3E8C5.idx  usb_ecm_4g_module.c.1770191692B26484.idx
doc/: 功能及调试.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  usb_ecm_4g_module.c
